# axum-practice2

./: Cargo.toml
resource/application_config/: config.toml
src/: main.rs
src/auth/: jwt.rs  login.rs  mod.rs
src/config/: application_config.rs  logging_config.rs  mod.rs  structs.rs
src/dashboard/: dashboard_handler.rs  structs.rs
src/send_view_log/: mod.rs  send_view_log.rs
